@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.99-4
-Date: 2006-01-02
+Date: 2006-01-03
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
